force-app/main/default/objects/CLASS__c/CLASS__c.object-meta.xml
<CustomObject>
    <label>CLASS</label>
    <nameField>
        <label>CLASS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CLASSES</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>