force-app/main/default/objects/CLASS__c/fields/COURSE_DURATION__c.field-meta.xml
<CustomField>
    <fullName>COURSE_DURATION__c</fullName>
    <label>COURSE DURATION</label>
    <length>100</length>
    <type>Text</type>
</CustomField>