force-app/main/default/objects/CLASS__c/fields/FEES__c.field-meta.xml
<CustomField>
    <fullName>FEES__c</fullName>
    <label>FEES</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>