force-app/main/default/objects/CLASS__c/fields/HIGHEST_ENTRANCE_SCORE__c.field-meta.xml
<CustomField>
    <fullName>HIGHEST_ENTRANCE_SCORE__c</fullName>
    <label>HIGHEST ENTRANCE SCORE</label>
    <summarizedField>Student__c.ENTRANCE_SCORE__c</summarizedField>
    <summaryForeignKey>Student__c.CLASS__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>