force-app/main/default/objects/CLASS__c/fields/LOWEST_ENTRANCE_SCORE__c.field-meta.xml
<CustomField>
    <fullName>LOWEST_ENTRANCE_SCORE__c</fullName>
    <label>LOWEST ENTRANCE SCORE</label>
    <summarizedField>Student__c.ENTRANCE_SCORE__c</summarizedField>
    <summaryForeignKey>Student__c.CLASS__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>