force-app/main/default/objects/CLASS__c/fields/TOTAL_ENTRANCE_SCORE__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_ENTRANCE_SCORE__c</fullName>
    <label>TOTAL  ENTRANCE SCORE</label>
    <summarizedField>Student__c.ENTRANCE_SCORE__c</summarizedField>
    <summaryForeignKey>Student__c.CLASS__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>