force-app/main/default/objects/CLASS__c/fields/TOTAL_STUDENTS__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_STUDENTS__c</fullName>
    <label>TOTAL STUDENTS</label>
    <summaryForeignKey>Student__c.CLASS__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>